# qt-udp-1

./: .gitignore  CMakeLists.txt  README.md  build.ps1
config/: app.json
console/: CMakeLists.txt
console/include/console/: client_details_dialog.hpp  client_discovery.hpp  console_broadcaster.hpp  console_control_server.hpp  jpeg_receiver.hpp  main_window.hpp
console/src/: client_details_dialog.cpp  client_discovery.cpp  console_broadcaster.cpp  console_control_server.cpp  database_integration.cpp  jpeg_receiver.cpp  main.cpp  main_window.cpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/core/: app_config.hpp
libs/core/src/: app_config.cpp
libs/ime_hook/: CMakeLists.txt
libs/ime_hook/include/ime_hook/: ime_hook.hpp
libs/ime_hook/src/: ime_hook.cpp
libs/network/: CMakeLists.txt
libs/network/include/network/: frame.hpp  ws_channel.hpp
libs/network/src/: frame.cpp  ws_channel.cpp
